--- a/sell-it-admin/package.json
+++ b/sell-it-admin/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -20,6 +21,8 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
