--- a/sell-it-admin/package.json
+++ b/sell-it-admin/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "lodash": "^4.17.21",
+    "netlify-cli": "^13.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy --prod --dir=build"
   },
   "eslintConfig": {
     "extends": [
