--- a/sell-it-admin/package.json
+++ b/sell-it-admin/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "netlify-cli": "^13.2.2",
     "prop-types": "^15.8.1",
